--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.0.0'
     implementation 'com.xhb:xbanner:1.5.1'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.youth.banner:banner:1.4.9'
 
 
 }
