--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,12 @@ dependencies {
     implementation 'com.xhb:xbanner:1.5.1'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'com.youth.banner:banner:1.4.9'
+    //implementation 'liji.library.dev:citypickerview:0.1.0'
+    implementation 'liji.library.dev:citypickerview:0.7.0'
+    /* implementation ('com.jcodecraeer:xrecyclerview:1.5.9'){
+        exclude group: 'com.android.support'
+    }*/
 
+    implementation 'com.jcodecraeer:xrecyclerview:1.5.9'
 
 }
